--- a/sauhmerios.html
+++ b/sauhmerios.html
@@ -256,6 +256,30 @@
                     <p class="precio">$2000</p>    
                 </div>
             </div>
+            <div class="box">
+                <img src="imagenes/pr19.jpg" alt="">
+                <div class="product-txt">
+                    <h3>Positive Vibes</h3>
+                    <p>El sahumerio Positive Vibes tiene un aroma muy dulce con un toque suave de limón, es exquisito. Este incienso, como su nombre indica, emana vibraciones positivas y aleja la negatividad.</p>
+                    <p class="precio">$2000</p>    
+                </div>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <div class="product-txt">
+                    <h3>incienso de vainilla</h3>
+                    <p>El incienso de Vainilla totalmente tranquilizante, favoreciendo y mejorando la tranquilidad de tu hogar. También es un gran afrodisíaco. El aroma de vainilla activa nuestros sentidos y revitaliza nuestro cuerpo. Es muy utilizado para momentos de gran desgaste físico, o bien para recuperarnos de esfuerzos.</p>
+                    <p class="precio">$2000</p>    
+                </div>
+            </div>
+            <div class="box">
+                <img src="imagenes/pr19.jpg" alt="">
+                <div class="product-txt">
+                    <h3>incienso de rosas</h3>
+                    <p>El incienso de rosa se utiliza para diversos fines, principalmente para crear un ambiente relajante y armonioso. Su aroma floral y calmante puede ayudar a reducir el estrés, mejorar la calidad del sueño y fomentar la paz interior. También se utiliza para fortalecer el amor, la compasión y la devoción para crear un ambiente romántico y sensual.</p>
+                    <p class="precio">$2000</p>    
+                </div>
+            </div>
         </div>
 
     </main>
