--- a/difusores.html
+++ b/difusores.html
@@ -122,21 +122,24 @@
                 <img src="imagenes/pr44.jpg" alt="">
                 <div class="product-txt">
                     <h3>Mango</h3>
-                    <p class="precio">$5500</p>       
+                    <p class="precio">$5500</p>  
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
                 <img src="imagenes/pr45.jpg" alt="">
                 <div class="product-txt">
                     <h3>Bergamota y Cedro</h3>
-                    <p class="precio">$5500</p>    
+                    <p class="precio">$5500</p>  
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
                 <img src="imagenes/pr46.jpg" alt="">
                 <div class="product-txt">
                     <h3>Limon</h3>
-                    <p class="precio">$5500</p>    
+                    <p class="precio">$5500</p>  
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -151,6 +154,7 @@
                 <div class="product-txt">
                     <h3>Flores Blancas</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -158,6 +162,7 @@
                 <div class="product-txt">
                     <h3>Bebe</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -172,6 +177,7 @@
                 <div class="product-txt">
                     <h3>Vainilla Tonca</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -179,6 +185,7 @@
                 <div class="product-txt">
                     <h3>Rocio</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -200,6 +207,7 @@
                 <div class="product-txt">
                     <h3>Maracuya</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -207,6 +215,7 @@
                 <div class="product-txt">
                     <h3>Mery</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -214,6 +223,7 @@
                 <div class="product-txt">
                     <h3>Lavanda y te verde</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -228,6 +238,7 @@
                 <div class="product-txt">
                     <h3>Citrnella</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -235,6 +246,7 @@
                 <div class="product-txt">
                     <h3>Green</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -249,6 +261,7 @@
                 <div class="product-txt">
                     <h3>Cony</h3>
                     <p class="precio">$5500</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             
