--- a/perfuminasTextiles.html
+++ b/perfuminasTextiles.html
@@ -123,7 +123,8 @@
                 <img src="imagenes/pr24.jpg" alt="">
                 <div class="product-txt">
                     <h3>Marino</h3>
-                    <p class="precio">$4000</p>       
+                    <p class="precio">$4000</p>   
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -131,6 +132,7 @@
                 <div class="product-txt">
                     <h3>Faren</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -145,6 +147,7 @@
                 <div class="product-txt">
                     <h3>Invicto</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -152,6 +155,7 @@
                 <div class="product-txt">
                     <h3>Tokyo</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -159,6 +163,7 @@
                 <div class="product-txt">
                     <h3>Argentina</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -166,6 +171,7 @@
                 <div class="product-txt">
                     <h3>Yourself</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -187,6 +193,7 @@
                 <div class="product-txt">
                     <h3>Invicto Legend</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -194,6 +201,7 @@
                 <div class="product-txt">
                     <h3>Rocio</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -201,6 +209,7 @@
                 <div class="product-txt">
                     <h3>Pitanga</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -208,6 +217,7 @@
                 <div class="product-txt">
                     <h3>Paula</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -222,6 +232,7 @@
                 <div class="product-txt">
                     <h3>Pomelo Rosado</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -229,6 +240,7 @@
                 <div class="product-txt">
                     <h3>Linah</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -243,6 +255,7 @@
                 <div class="product-txt">
                     <h3>Green</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -250,6 +263,7 @@
                 <div class="product-txt">
                     <h3>Good Woman</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -257,6 +271,7 @@
                 <div class="product-txt">
                     <h3>Flores Blancas</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -264,6 +279,7 @@
                 <div class="product-txt">
                     <h3>Cony</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -271,6 +287,7 @@
                 <div class="product-txt">
                     <h3>XS</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -278,6 +295,7 @@
                 <div class="product-txt">
                     <h3>Verbena</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -285,6 +303,7 @@
                 <div class="product-txt">
                     <h3>Bella</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -292,6 +311,7 @@
                 <div class="product-txt">
                     <h3>Bamboo</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -299,6 +319,7 @@
                 <div class="product-txt">
                     <h3>Apolo</h3>
                     <p class="precio">$4000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             
