--- a/aerosoles.html
+++ b/aerosoles.html
@@ -122,14 +122,15 @@
                 <img src="imagenes/pr31.jpg" alt="">
                 <div class="product-txt">
                     <h3>Prunella</h3>
-                    <p class="precio">$5300</p>       
+                    <p class="precio">$5300</p>      
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
                 <img src="imagenes/pr32.jpg" alt="">
                 <div class="product-txt">
                     <h3>Sandia Pepino</h3>
-                    <p class="precio">$5300</p>    
+                    <p class="precio">$5300</p>   
                 </div>
             </div>
             <div class="box">
@@ -144,6 +145,7 @@
                 <div class="product-txt">
                     <h3>Damasco</h3>
                     <p class="precio">$5300</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -151,6 +153,7 @@
                 <div class="product-txt">
                     <h3>Flowers</h3>
                     <p class="precio">$5300</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -179,6 +182,7 @@
                 <div class="product-txt">
                     <h3>Mix Citrico</h3>
                     <p class="precio">$5000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -186,6 +190,7 @@
                 <div class="product-txt">
                     <h3>Frutos Rojos</h3>
                     <p class="precio">$5000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -193,6 +198,7 @@
                 <div class="product-txt">
                     <h3>Mix Citrico</h3>
                     <p class="precio">$3000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -200,6 +206,7 @@
                 <div class="product-txt">
                     <h3>Petalos Florales</h3>
                     <p class="precio">$3000</p>    
+                    <p>SIN STOCK</p>
                 </div>
             </div>
             <div class="box">
@@ -213,21 +220,24 @@
                 <img src="imagen/pr53.jpg" alt="">
                 <div class="product-txt">
                     <h3>Verbena</h3>
-                    <p class="precio">$5300</p>       
+                    <p class="precio">$5300</p>     
+                    <p>SIN STOCK</p>
                 </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr54.jpg" alt="">
                     <div class="product-txt">
                         <h3>Lavanda</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>     
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr55.jpg" alt="">
                     <div class="product-txt">
                         <h3>Lola</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>      
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
@@ -235,6 +245,7 @@
                     <div class="product-txt">
                         <h3>Violetas</h3>
                         <p class="precio">$5300</p>       
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
@@ -248,14 +259,16 @@
                     <img src="imagen/pr58.jpg" alt="">
                     <div class="product-txt">
                         <h3>Bergamota y Naranja</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>    
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr59.jpg" alt="">
                     <div class="product-txt">
                         <h3>Rosas</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>      
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
@@ -269,7 +282,8 @@
                     <img src="imagen/pr61.jpg" alt="">
                     <div class="product-txt">
                         <h3>Cony</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>     
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
@@ -284,34 +298,39 @@
                     <div class="product-txt">
                         <h3>Lavanda y Te Verde</h3>
                         <p class="precio">$5300</p>       
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr64.jpg" alt="">
                     <div class="product-txt">
                         <h3>Green</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>   
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr65.jpg" alt="">
                     <div class="product-txt">
                         <h3>Flores Blancas</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>     
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr66.jpg" alt="">
                     <div class="product-txt">
                         <h3>Limon</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>      
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
                     <img src="imagen/pr67.jpg" alt="">
                     <div class="product-txt">
                         <h3>Linah</h3>
-                        <p class="precio">$5300</p>       
+                        <p class="precio">$5300</p>      
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
@@ -319,6 +338,7 @@
                     <div class="product-txt">
                         <h3>Rocio</h3>
                         <p class="precio">$5300</p>       
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
                 <div class="box">
@@ -326,6 +346,7 @@
                     <div class="product-txt">
                         <h3>Mery</h3>
                         <p class="precio">$5300</p>       
+                        <p>SIN STOCK</p>
                     </div>
                 </div>
         </div>
